Add footnote to footer section.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -378,7 +378,8 @@
         
         <div class="col-1-of-2">
             <p class="footer__copyright">
-                Built by <a href="#" class="footer__link">Kaykay Adewunmi</a> for customer viewing. Copyright &copy; by Kaykay Adewunmi
+                Built by <a href="#" class="footer__link">Kaykay Adewunmi</a> for customer viewing. &copy; Copyright 2018 by Kaykay Adewunmi. 
+            Feel free to use this project for your own purposes. Based on tutorial by Jonas Schmedtman - Udemy.
             </p>
         </div>
     </div>
